000001 - integrated with blog api. Home page view and create blog post complete

--- a/vocabuilt-challenge/src/components/header/header.component.html
+++ b/vocabuilt-challenge/src/components/header/header.component.html
@@ -4,8 +4,12 @@
         <li>Home</li>
       </a>
 
-      <a href="/something">
-        <li>Something</li>
+      <a href="/create-post">
+        <li>New Post</li>
+      </a>
+
+      <a href="/manage">
+        <li>Manage</li>
       </a>
     </ul>
 </nav>
