--- a/vocabuilt-challenge/src/app/app.component.html
+++ b/vocabuilt-challenge/src/app/app.component.html
@@ -1,2 +1,3 @@
 <header-component></header-component>
+<!-- NOTE: Could have wrapped this in a style container to avoid repetative class styling -->
 <router-outlet></router-outlet>
