--- a/vocabuilt-challenge/src/components/header/header.component.scss
+++ b/vocabuilt-challenge/src/components/header/header.component.scss
@@ -5,7 +5,7 @@
     height: 50px;
     width: 100vw;
     background-color: #000;
-    border-bottom: solid 5px rgb(210, 209, 209);
+    border-bottom: solid 5px #6BA292;
     padding-left: 10em;
   
     ul {
@@ -38,35 +38,17 @@
                 line-height: 50px;
                 height: 100%;
                 min-width: 3em;
-                transition: all 0.3s ease-in-out;
+                transition: background-color 0.3s ease-in-out;
                 font-size: 1.2em;
             }
 
-            .test {
-                position: relative;
-                padding: 0;
-                margin-top: -50px;
-                height: 0;
-                background-color: #ccc;
-            }
-
             &:hover {
-                background-color: #fff;
-                color: #000;
+                background-color: #6BA292;
                 height: calc(100% + 5px);
                 margin-top: 5px;
     
                 li {
-                    background-color: #fff;
-                }
-    
-                .test {
-                    height: 100%;
-                    padding: 0 1em;
-                    line-height: 50px;
-                    margin-top: 0;
-                    color: #fff;
-                    background-color: #333;
+                    background-color: #6BA292;
                 }
             }
         }
